chat goes bottom up, fixed mobile alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -2,27 +2,30 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #efeff2;
 }
 
 body {
     font: 13px Helvetica, Arial;
+    background-color: #efeff2;
 }
 
 #messageBox {
     background: #000;
-    padding: 0.3%;
-    margin: 1%;
+    padding: 0.7vh;
+    display: block;
+    margin-left: 5%;
     position: fixed;
-    bottom: 0;
+    bottom: 2vh;
     width: 90%;
+    height: 7vh;
 }
 
 #messageBox input {
     border: 0;
-    padding: 1%;
-    width: 89%;
+    padding: 1vh;
+    width: 88%;
     margin-right: .5%;
+    height: 100%;
 }
 
 #messageBox button {
@@ -31,6 +34,8 @@ body {
     color: #FFFFFF;
     border: none;
     padding: 0.5%;
+    cursor: pointer;
+    height: 100%;
 }
 
 #messages {
@@ -50,25 +55,27 @@ body {
 
 #identifier {
     padding: 1%;
+    margin-bottom: 0.7vh;
+    margin-top: 1vh;
     font-size: medium;
     width: 66%;
     display: inline-block;
     float: left;
-
 }
 
 #chat-box{
     /*position: relative;
     display: inline;*/
     width: 66%;
+    height: 80vh;
+    overflow: auto;
     display:inline-block;
     float: left;
     margin-left: 1%;
-    /*
     display: -webkit-flex;
     -webkit-flex-direction: column-reverse;
     display: flex;
-    flex-direction: column-reverse;*/
+    flex-direction: column-reverse;
     word-wrap: break-word;
 }
 
@@ -87,25 +94,42 @@ body {
 .style-box {
     background-color: #dadae3;
     border: #111111;
-    padding: 10px;
+    /* padding: 10px; */
     height: 90%;
 }
 
 #user-list {
-    list-style-type: none;
+    height: 80vh;
+    display: -webkit-flex;
+    -webkit-flex-direction: column-reverse;
+    display: flex;
+    flex-direction: column-reverse;
     word-wrap: break-word;
+    list-style-type: none;
     width:100%
 }
 
 #user-list li {
     display: block;
-    padding: 5px 10px;
+    padding: 0 7% 5%;
+    font-size: medium;
 }
 
 #user-title {
     display: inline-block;
     float: right;
     font-size: medium;
+    margin-bottom: 0.7vh;
+    margin-top: 1vh;
     width: 33%;
     padding: 1%;
+}
+
+.error-text {
+    font-style: italic;
+    color: crimson;
+}
+
+.nick-color {
+    color: #008800;
 }
